mds: fix scan_stray_dir not reset next.frag on each run of stray inode

When we finish scanning one stray inode we should reset next.frag
so that next stray inode could start from its first dir fragment
rather than last stray inode's last frag.

Resolves: rhbz#2161478
Fixes: https://tracker.ceph.com/issues/58294
Signed-off-by: ethanwu <ethanwu@synology.com>
(cherry picked from commit a4799689d551f865078aef4607d2cc09a67caea1)