src/mds/MDCache.cc
@@ -9934,6 +9934,7 @@ void MDCache::scan_stray_dir(dirfrag_t next)
 	}
       }
     }
+    next.frag = frag_t();
   }
 }
 
